# cryptobots

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/scripts/: publish
.github/workflows/: format.yml  publish.yml
src/cryptobots/_cli/: cli.py  constants.py  utilities.py
src/cryptobots/config/: breakout.yaml  cc.yaml  emac.yaml  grid.yaml  range.yaml  twap.yaml
src/cryptobots/strategies/: breakout.py  cc.py  emac.py  grid.py  range.py  twap.py
