[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cryptobots"
version = "0.2.0"
description = "Cyptocurrency trading bots"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'autotrader >= 1.0.0',
  'ccxt',
  'websockets',
  'Click',
  'trogon',
  'johnnydep',
]

[project.urls]
Repository = "https://github.com/kieran-mackle/cryptobots"
Issues = "https://github.com/kieran-mackle/cryptobots/issues"
Changelog = "https://github.com/kieran-mackle/cryptobots/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  'black >= 23.9.1',
  'commitizen >= 3.10.0',
  'pre-commit >= 3.4.0',
]

[project.scripts]
cryptobots = "cryptobots._cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_provider = "pep621"
version_files = [
    "pyproject.toml:^version",
]
update_changelog_on_bump = true
